--- a/skinali/sass/_interface.sass
+++ b/skinali/sass/_interface.sass
@@ -1,7 +1,15 @@
 body
     +light
     color: $text-color
-
+.section
+    padding: 100px 0
+    &-title
+        font-size: 30px
+        +bold 
+        text-align: center
+        text-transform: uppercase
+    &__title
+        margin-bottom: 100px    
 .button-o
     border: 2px solid $primary
     font-size: 12px
@@ -50,5 +58,9 @@ body
 @media (max-width: 576px)
     .button-o
         font-size: 10px
+    .section
+        padding: 60px 0
+        &-title
+            font-size: 24px    
 
         
